# camera_bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
.github/workflows/: dockerimage.yml  release.yml  rust.yml
src/: main.rs
