[package]
name = "camera_bot"
version = "0.3.6"
edition = "2018"
authors = [
    "Guilherme Chichanoski <guilherme.chichanoski@gmail.com>",
    "Tiago Nascimento <tiago@theosirian.com>",
]

[dependencies]
actix-rt = "1.1"
actix-web = "3.2"
anyhow = "1.0"
futures = "0.3"
once_cell = "1.4"
serde = "1.0"

[dependencies.reqwest]
version = "0.10"
features = ["json"]

[dependencies.telegram-bot]
git = "https://github.com/telegram-rs/telegram-bot"
