[package]
name = "camera_bot"
version = "0.3.11"
edition = "2018"
authors = [
    "Guilherme Chichanoski <guilherme.chichanoski@gmail.com>",
    "Tiago Nascimento <tiago@theosirian.com>",
]

[dependencies]
anyhow = "1"
futures = "0.3"
serde = "1"
log = "0.4"
env_logger = "0.8"

[dependencies.actix-web]
version = "3"
features = ["rustls"]

[dependencies.reqwest]
version = "0.11"
features = ["json", "rustls-tls"]

[dependencies.telegram-bot]
git = "https://github.com/telegram-rs/telegram-bot"
features = ["rustls"]
default-features = false
