[package]
name = "camera_bot"
version = "0.4.1"
edition = "2018"
authors = [
    "Guilherme Chichanoski <guilherme.chichanoski@gmail.com>",
    "Tiago Nascimento <tiago@theosirian.com>",
]

[dependencies]
anyhow = "1"
serde = "1"
log = "0.4"
pretty_env_logger = "0.4"
futures = "0.3"
bytes = "1"

[dependencies.reqwest]
version = "0.11"
features = ["json", "rustls-tls"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.teloxide]
version = "0.4"
features = ["auto-send", "macros", "rustls"]
default-features = false
